page-footer added

--- a/sponsors.html
+++ b/sponsors.html
@@ -94,7 +94,7 @@
         </div>
     </div>
 
-	<footer class="green">
+	<footer class="green page-footer">
 		<div class="container">
 			<div class="row">
 				<div class="col l6 s12">
