--- a/cctf.html
+++ b/cctf.html
@@ -72,7 +72,7 @@
         </div>
     </div>
 
-    <footer class="green">
+    <footer class="green page-footer">
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
