--- a/about.html
+++ b/about.html
@@ -40,68 +40,55 @@
         <li><a href="contact.html">Contact</a></li>
         <li><a href="sponsors.html">Sponsors</a></li>
     </ul>
-    <div class="section no-pad-bot" id="index-banner">
-        <div class="container">
-            <br>
-            <br>
-            <h1 class="header center green-text">About</h1>
-			<div class="row center">
-                <h5 class="header col s12 light">Come play with us</h5>
-            </div>
-            <br>
-			<br>
-        </div>
-    </div>
 	
-	<div class="container">
-		<div class="section">
-			<h5>ABC</h5>
+	<main>
+		<div class="section no-pad-bot" id="index-banner">
+			<div class="container">
+				<h1 class="header center green-text">About</h1>
+				<div class="row center">
+					<h5 class="header col s12 light">tl;dr - CCTF is awesome. Don't miss out.</h5>
+				</div>
+			</div>
 		</div>
-	</div>
+		
+		<br>
+		
+		<div class="container">
+			<div class="section">
+				<h5>CTF</h5>
+				<p>Capture the flag is a competition in which teams solve challenges and find 'flags.' These flags are not physical flags. Instead, they are a string of characters that can be submitted for points.</p>
+			</div>
+			<div class="divider"></div>
 
+			<div class="section">
+				<h5>Unparalleled Fun</h5>
+				<p>Challenge yourself and learn new concepts. You never really know how good you are at security and computer science until you really try it out. You might just win.</p>
+				<p>Don't know anything about computer science or cyber-security? Fear not. CCTF is designed to accommodate both novice and advanced players alike. Many challenges will guide you to the right resources. As long as you're willing to learn and do a little research, most challenges should be within reach.</p>
+			</div>
+			<div class="divider"></div>
 
-    <div class="container">
-        <div class="section">
+			<div class="section">
+				<h5>Innovative Scoring</h5>
+				<p>CCTF employs an unconventional method of scoring. Teams will earn two types of points - <b>Base Points</b> and <b>Interact Points</b>. After experimenting with our club, we found that students really enjoy having the ability to influence other teams. With Interact Points in CCTF, teams can attempt to decrease the score of other teams* (read FAQ for more information). CCTF will also award bonus points to teams that complete challenges before other teams.</p>
+			</div>
+			<div class="divider"></div>
+			
+			<div class="section">
+				<h5>Elegant Design</h5>
+				<p>The CCTF Platform is a completely novel CTF platform built form scratch using Django and MaterializeCSS. It is one of the only CTF platforms to be <b>fully mobile-compatible</b> and responsive.</p>
+			</div>
+			<div class="divider"></div>
+			
+			<div class="section">
+				<h5>Dedicated Contributors</h5>
+				<p>CAMS CSC is a computer science and cyber-security club in the LBUSD school California Academy of Mathematics and Science (CAMS). We do a variety of activities including teaching computer science concepts and running competitions.</p>
+				<p>Why do we do this? We just... love computers. We want to share our passion of computer science and show everyone how exciting the field of computer science and cyber-security can be.</p>
+			</div>
+		</div>
+	</main>
 
-            <!--   Icon Section   -->
-            <div class="row">
-                <div class="col s12 m4">
-                    <div class="icon-block">
-                        <h2 class="center green-text"><i class="mdi-social-person"></i></h2>
-                        <h5 class="center">Who we are</h5>
-
-                        <p class="light">CAMS CSC is a computer science club in the LBUSD school California Academy of Mathematics and Science. We do a variety of activities including teaching computer science concepts and running competitions.</p>
-                    </div>
-                </div>
-
-                <div class="col s12 m4">
-                    <div class="icon-block">
-                        <h2 class="center green-text"><i class="mdi-hardware-desktop-windows"></i></h2>
-                        <h5 class="center">Why we do this</h5>
-
-                        <p class="light">We just… love computers. We want to share our passion of computer science and teach everyone how exciting the field of computer science and cyber security really is.</p>
-                    </div>
-                </div>
-
-                <div class="col s12 m4">
-                    <div class="icon-block">
-                        <h2 class="center green-text"><i class="mdi-editor-insert-emoticon"></i></h2>
-                        <h5 class="center">Why should you play</h5>
-
-                        <p class="light">Challenge yourself and learn new concepts. You never really know how good you are at security and computer science until you really try it out. You might just win.</p>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-        <br>
-        <br>
-
-        <div class="section">
-
-        </div>
-    </div>
-
+	<br>
+	
 	<footer class="green page-footer">
 		<div class="container">
 			<div class="row">
