--- a/contact.html
+++ b/contact.html
@@ -40,61 +40,55 @@
         <li class="active"><a href="contact.html">Contact</a></li>
         <li><a href="sponsors.html">Sponsors</a></li>
     </ul>
-    <div class="section no-pad-bot" id="index-banner">
-        <div class="container">
-            <br>
-            <br>
-            <h1 class="header center green-text">Contact Us</h1>
-            <br>
-            <br>
+	
+	<main>
+		<div class="section no-pad-bot" id="index-banner">
+			<div class="container">
+				<h1 class="header center green-text">Contact Us</h1>
+				<div class="row center">
+					<h5 class="header col s12 light">Don't be shy. Contact us if you have any questions. We are nice (most of the time).</h5>
+				</div>
+			</div>
+		</div>
+		
+		<br>
 
-        </div>
-    </div>
-
-
-    <div class="container">
-        <div class="section">
-
-            <!--   Icon Section   -->
-            <div class="row">
-
-                <form class="col s12">
-                    <div class="row">
-                        <div class="input-field col s12 m6 l6">
-                            <input id="first_namecontact" type="text" class="validate">
-                            <label for="first_namecontact" class="">First Name</label>
-                        </div>
-                        <div class="input-field col s12 m6 l6">
-                            <input id="last_namecontact" type="text" class="validate">
-                            <label for="last_namecontact">Last Name</label>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <textarea class="materialize-textarea" required></textarea>
-                            <label>Message</label>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <input id="email" type="email" class="validate">
-                            <label for="email">Email</label>
-                        </div>
-                    </div>
-                    <button class="btn waves-effect waves-ligh orange accent-2" type="submit" name="action">Submit
-                        <i class="mdi-content-send right"></i>
-                    </button>
-                </form>
-            </div>
-
-        </div>
-        <br>
-        <br>
-
-        <div class="section">
-
-        </div>
-    </div>
+		<div class="container">
+			<div class="section">
+				<div class="row">
+					<form class="col s12">
+						<div class="row">
+							<div class="input-field col s12 m6 l6">
+								<input id="first_namecontact" type="text" class="validate">
+								<label for="first_namecontact" class="">First Name</label>
+							</div>
+							<div class="input-field col s12 m6 l6">
+								<input id="last_namecontact" type="text" class="validate">
+								<label for="last_namecontact">Last Name</label>
+							</div>
+						</div>
+						<div class="row">
+							<div class="input-field col s12">
+								<textarea class="materialize-textarea" required></textarea>
+								<label>Message</label>
+							</div>
+						</div>
+						<div class="row">
+							<div class="input-field col s12">
+								<input id="email" type="email" class="validate">
+								<label for="email">Email</label>
+							</div>
+						</div>
+						<button class="btn waves-effect waves-ligh orange accent-2" type="submit" name="action">Submit
+							<i class="mdi-content-send right"></i>
+						</button>
+					</form>
+				</div>
+			</div>
+		</div>
+	</main>
+	
+	<br>
 
 	<footer class="green page-footer">
 		<div class="container">
