--- a/faq.html
+++ b/faq.html
@@ -40,114 +40,102 @@
         <li><a href="contact.html">Contact</a></li>
         <li><a href="sponsors.html">Sponsors</a></li>
     </ul>
-    <div class="section no-pad-bot" id="index-banner">
-        <div class="container">
-            <br>
-            <br>
-            <h1 class="header center green-text">Frequently Asked Questions</h1>
-            <br>
-            <br>
+	
+	<main>
+		<div class="section no-pad-bot" id="index-banner">
+			<div class="container">
+				<h1 class="header center green-text">Frequently Asked Questions</h1>
+				<div class="row center">
+					<h5 class="header col s12 light">We assume that you will ask these questions.</h5>
+				</div>
+			</div>
+		</div>
+		
+		<br>
 
-        </div>
-    </div>
-
-
-    <div class="container">
-        <div class="section">
-
-            <!--   Icon Section   -->
-            <div class="row">
-                <ul class="collapsible">
-                    <li>
-                        <div class="collapsible-header"><i class="mdi-content-flag"></i>What is CTF?</div>
-                        <div class="collapsible-body">
-                            <p>Capture the flag is a competition in which teams solve challenges and find ‘flags.’ These flags are not physical flags. Instead, they are a string of characters that can be submitted for points.</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="collapsible-header"><i class="mdi-social-plus-one"></i>How do the points work?</div>
-                        <div class="collapsible-body">
-                            <p>Your team will be awarded two types of points. <b>Base Points</b> are solely used for your score. <b>Interact Points</b> can be used to attack other teams and knock down their score. <b>Interact Points</b> also act as a buffer to defend against incoming by being depleted before <b>Base Points</b>. For every challenge your team completes, your team will receive the number of <b>Base Points </b> indicated by the challenge. Your team will also receive around 15% of the challenge’s value as <b>Interact Points</b>. Note that only your <b>Base Points</b> count toward your final score.</p>
-                        </div>
-                    </li>
-					<li>
-                        <div class="collapsible-header"><i class="mdi-image-looks-one"></i>Are there bonuses for finishing first?</div>
-                        <div class="collapsible-body">
-                            <p>Yes! Speed is encouraged. The first team that completes a challenge will receive a 3% score bonus. Teams that finish the challenge second or third will receive 2% and 1% respectively. The minimum values for bonuses are 3 points, 2 points, and 1 points respective for first, second, and third (in the case that 3% is less than 3 points, etc.).</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="collapsible-header"><i class="mdi-hardware-computer"></i>What are the challenges?</div>
-                        <div class="collapsible-body">
-                            <p>The challenges will fall into one of the following categories: cryptography, forensics, exploitation, programming, and miscellaneous.</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="collapsible-header"><i class="mdi-action-help"></i>How do I participate?</div>
-                        <div class="collapsible-body">
-                            <p>Sign up! The buttons are very blatant.</p>
-                        </div>
-                    </li>
-					<li>
-                        <div class="collapsible-header"><i class="mdi-social-school"></i>Who can participate?</div>
-                        <div class="collapsible-body">
-                            <p>All students currently enrolled in middle school or high school can participate.</p>
-                        </div>
-                    </li>
-					<li>
-                        <div class="collapsible-header"><i class="mdi-device-access-time"></i>When is this?</div>
-                        <div class="collapsible-body">
-                            <p>The competition will begin on April 16th at 5:00 PM PST and end on April 24th at 5:00 PM PST.</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="collapsible-header"><i class="mdi-social-group"></i>Who is running this?</div>
-                        <div class="collapsible-body">
-                            <p>The founders of CAMS CSC, Lujing Cen and Oskar Wirga, are the main maintainers of this competition.</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="collapsible-header"><i class="mdi-editor-attach-money"></i>Are there prizes?</div>
-                        <div class="collapsible-body">
-                            <p>Aside from knowledge, there probably will be prizes award to the top 3 teams.</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="collapsible-header"><i class="mdi-av-not-interested"></i>Can I cheat?</div>
-                        <div class="collapsible-body">
-                            <p>Absolutely not. Sharing flags with other teams is not permitted under any circumstances. Teams caught cheating will be immediately disqualified.</p>
-                        </div>
-                    </li>
-					<li>
-                        <div class="collapsible-header"><i class="mdi-social-group-add"></i>Can I create more than 1 team?</div>
-                        <div class="collapsible-body">
-                            <p>No. There is no point in creating multiple accounts. Teams found with duplicated accounts will be disqualified.</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="collapsible-header"><i class="mdi-image-exposure-zero"></i>How much does this cost?</div>
-                        <div class="collapsible-body">
-                            <p>Nothing! $0.00.</p>
-                        </div>
-                    </li>
-					<li>
-                        <div class="collapsible-header"><i class="mdi-social-public"></i>Where can I start learning?</div>
-                        <div class="collapsible-body">
-                            <p>While this competition will provide you with hints along the way, you can begin learning by viewing our incomplete <a href="http://bobbyluig.gitbooks.io/csc-learn/">GitBook</a>. You can also look at other CTF competitions by searching on Google.</p>
-                        </div>
-                    </li>
-                </ul>
-
-            </div>
-
-        </div>
-        <br>
-        <br>
-
-        <div class="section">
-
-        </div>
-    </div>
+		<div class="container">
+			<div class="section">
+				<div class="row">
+					<ul class="collapsible">
+						<li>
+							<div class="collapsible-header"><i class="mdi-social-plus-one"></i>How do the points work?</div>
+							<div class="collapsible-body">
+								<p>Your team will be awarded two types of points. <b>Base Points</b> are solely used for your score. <b>Interact Points</b> can be used to attack other teams and knock down their score. <b>Interact Points</b> also act as a buffer to defend against incoming by being depleted before <b>Base Points</b>. For every challenge your team completes, your team will receive the number of <b>Base Points </b> indicated by the challenge. Your team will also receive around 20% of the challenge’s value as <b>Interact Points</b>. Note that only your <b>Base Points</b> count toward your final score.</p>
+							</div>
+						</li>
+						<li>
+							<div class="collapsible-header"><i class="mdi-image-looks-one"></i>Are there bonuses for finishing first?</div>
+							<div class="collapsible-body">
+								<p>Yes! Speed is encouraged. The first team that completes a challenge will receive a 3% score bonus. Teams that finish the challenge second or third will receive 2% and 1% respectively. The minimum values for bonuses are 3 points, 2 points, and 1 points respective for first, second, and third (in the case that 3% is less than 3 points, etc.).</p>
+							</div>
+						</li>
+						<li>
+							<div class="collapsible-header"><i class="mdi-hardware-computer"></i>What are the challenges?</div>
+							<div class="collapsible-body">
+								<p>The challenges will fall into one of the following categories: cryptography, forensics, exploitation, programming, and miscellaneous.</p>
+							</div>
+						</li>
+						<li>
+							<div class="collapsible-header"><i class="mdi-action-help"></i>How do I participate?</div>
+							<div class="collapsible-body">
+								<p>Sign up! The buttons are very blatant.</p>
+							</div>
+						</li>
+						<li>
+							<div class="collapsible-header"><i class="mdi-social-school"></i>Who can participate?</div>
+							<div class="collapsible-body">
+								<p>All students currently enrolled in middle school or high school can participate.</p>
+							</div>
+						</li>
+						<li>
+							<div class="collapsible-header"><i class="mdi-device-access-time"></i>When is this?</div>
+							<div class="collapsible-body">
+								<p>The competition will begin on April 16th at 5:00 PM PST and end on April 24th at 5:00 PM PST.</p>
+							</div>
+						</li>
+						<li>
+							<div class="collapsible-header"><i class="mdi-social-group"></i>Who is running this?</div>
+							<div class="collapsible-body">
+								<p>The founders of CAMS CSC, Lujing Cen and Oskar Wirga, are the main maintainers of this competition.</p>
+							</div>
+						</li>
+						<li>
+							<div class="collapsible-header"><i class="mdi-editor-attach-money"></i>Are there prizes?</div>
+							<div class="collapsible-body">
+								<p>Aside from knowledge, there probably will be prizes award to the top 3 teams.</p>
+							</div>
+						</li>
+						<li>
+							<div class="collapsible-header"><i class="mdi-av-not-interested"></i>Can I cheat?</div>
+							<div class="collapsible-body">
+								<p>Absolutely not. Sharing flags with other teams is not permitted under any circumstances. Teams caught cheating will be immediately disqualified.</p>
+							</div>
+						</li>
+						<li>
+							<div class="collapsible-header"><i class="mdi-social-group-add"></i>Can I create more than 1 team?</div>
+							<div class="collapsible-body">
+								<p>No. There is no point in creating multiple accounts. Teams found with duplicated accounts will be disqualified.</p>
+							</div>
+						</li>
+						<li>
+							<div class="collapsible-header"><i class="mdi-image-exposure-zero"></i>How much does this cost?</div>
+							<div class="collapsible-body">
+								<p>Nothing! $0.00.</p>
+							</div>
+						</li>
+						<li>
+							<div class="collapsible-header"><i class="mdi-social-public"></i>Where can I start learning?</div>
+							<div class="collapsible-body">
+								<p>While this competition will provide you with hints along the way, you can begin learning by viewing our incomplete <a href="http://bobbyluig.gitbooks.io/csc-learn/">GitBook</a>. You can also look at other CTF competitions by searching on Google.</p>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</main>
+	
+	<br>
 
 	<footer class="green page-footer">
 		<div class="container">
