--- a/index.html
+++ b/index.html
@@ -39,64 +39,55 @@
         <li><a href="contact.html">Contact</a></li>
         <li><a href="sponsors.html">Sponsors</a></li>
     </ul>
-    <div class="section no-pad-bot" id="index-banner">
-        <div class="container">
-            <br>
-            <br>
-            <h1 class="header center green-text">Welcome to CCTF</h1>
-            <div class="row center">
-                <h5 class="header col s12 light">A Capture the Flag Computer Science competition created by CAMS for students of Southern California High Schools</h5>
-            </div>
-            <div class="row center">
-                <a href="signup.html" id="download-button" class="btn-large waves-effect waves-light orange accent-2">Sign Up</a>
-            </div>
-            <br>
-            <br>
+	
+	<main>
+		<div class="section no-pad-bot" id="index-banner">
+			<div class="container">
+				<h1 class="header center green-text">Welcome to CCTF</h1>
+				<div class="row center">
+					<h5 class="header col s12 light">A Capture the Flag competition created by CAMS for middle and high school students.</h5>
+				</div>
+			</div>
+		</div>
+		
+		<br>
+		
+		<div class="container">
+			<div class="section">
 
-        </div>
-    </div>
+				<!--   Icon Section   -->
+				<div class="row">
+					<div class="col s12 m4">
+						<div class="icon-block">
+							<h2 class="center green-text"><i class="mdi-content-flag"></i></h2>
+							<h5 class="center">Flag</h5>
 
+							<p class="light">In this game of wits, you and your team will solve a variety of security and computer science based challenges to earn points. Every challenge will yield a flag - a recognizable string of characters enclosed by {braces}. Your team can submit these flags for points and advance further up the scoreboard.</p>
+						</div>
+					</div>
 
-    <div class="container">
-        <div class="section">
+					<div class="col s12 m4">
+						<div class="icon-block">
+							<h2 class="center green-text"><i class="mdi-hardware-desktop-windows"></i></h2>
+							<h5 class="center">Computer Science</h5>
 
-            <!--   Icon Section   -->
-            <div class="row">
-                <div class="col s12 m4">
-                    <div class="icon-block">
-                        <h2 class="center green-text"><i class="mdi-content-flag"></i></h2>
-                        <h5 class="center">Flag</h5>
+							<p class="light">We believe that computer science education should be exciting and dynamic. Creating a CTF competition using bleeding edge technology iwas the perfect way to express our passions. The entire infrastructure is powered by Django and created using the newest material design specifications.</p>
+						</div>
+					</div>
 
-                        <p class="light">In this game of wits, you and your team will solve a variety of security and computer science based challenges to earn points. Every challenge will yield a flag - a recognizable string of characters enclosed by {braces}. Your team can submit these flags for points and advance further up the scoreboard.</p>
-                    </div>
-                </div>
-
-                <div class="col s12 m4">
-                    <div class="icon-block">
-                        <h2 class="center green-text"><i class="mdi-hardware-desktop-windows"></i></h2>
-                        <h5 class="center">Computer Science</h5>
-
-                        <p class="light">We believe that computer science education should be exciting and dynamic. Creating a CTF competition using bleeding edge technology iwas the perfect way to express our passions. The entire infrastructure is powered by Django and created using the newest material design specifications.</p>
-                    </div>
-                </div>
-
-                <div class="col s12 m4">
-                    <div class="icon-block">
-                        <h2 class="center green-text"><i class="mdi-social-people"></i></h2>
-                        <h5 class="center">Cooperation</h5>
-                        <p class="light">Create teams of up to 4 members. You will need all the security and computer science skills you have. There are many challenges and categories. Diversify your team and get people with different strengths. Remember, the more people there are on your team, the less blame each person receives.</p>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-        <br>
-        <br>
-
-        <div class="section">
-
-        </div>
-    </div>
+					<div class="col s12 m4">
+						<div class="icon-block">
+							<h2 class="center green-text"><i class="mdi-social-people"></i></h2>
+							<h5 class="center">Cooperation</h5>
+							<p class="light">Create teams of up to 4 members. You will need all the security and computer science skills you have. There are many challenges and categories. Diversify your team and get people with different strengths. Remember, the more people there are on your team, the less blame each person receives.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</main>
+	
+	<br>
 
 	<footer class="green page-footer">
 		<div class="container">
