--- a/sponsors.html
+++ b/sponsors.html
@@ -40,60 +40,55 @@
         <li><a href="contact.html">Contact</a></li>
         <li class="active"><a href="sponsors.html">Sponsors</a></li>
     </ul>
-    <div class="section no-pad-bot" id="index-banner">
-        <div class="container">
-            <br>
-            <br>
-            <h1 class="header center green-text">Sponsors</h1>
-            <br>
-            <br>
+	
+	<main>
+		<div class="section no-pad-bot" id="index-banner">
+			<div class="container">
+				<h1 class="header center green-text">Sponsors</h1>
+				<div class="row center">
+					<h5 class="header col s12 light">This competition would not be possible without the generous support of our sponsors.</h5>
+				</div>
+			</div>
+		</div>
+		
+		<br>
 
-        </div>
-    </div>
+		<div class="container">
+			<div class="section">
+				<div class="row">
+					<div class="col s12 m4">
+						<div class="icon-block">
+							<h2 class="center green-text"><i class="mdi-content-flag"></i></h2>
+							<h5 class="center">Company</h5>
 
+							<p class="light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vestibulum in nisi vel faucibus. Aliquam erat volutpat. Aliquam dapibus tempus ipsum, sed lobortis turpis venenatis id. Sed quam urna, pellentesque ac finibus in, tempus in orci. Sed ultricies lectus risus, quis luctus lacus fringilla ac. Duis efficitur orci tellus, feugiat blandit mi facilisis ac. Nulla ut urna et magna aliquet tempus.</p>
+						</div>
+					</div>
 
-    <div class="container">
-        <div class="section">
+					<div class="col s12 m4">
+						<div class="icon-block">
+							<h2 class="center green-text"><i class="mdi-hardware-desktop-windows"></i></h2>
+							<h5 class="center">Company</h5>
 
-            <!--   Icon Section   -->
-            <div class="row">
-                <div class="col s12 m4">
-                    <div class="icon-block">
-                        <h2 class="center green-text"><i class="mdi-content-flag"></i></h2>
-                        <h5 class="center">Company</h5>
+							<p class="light">Donec suscipit euismod justo vitae tempor. Nullam laoreet fermentum gravida. Proin vel lectus et ipsum elementum tristique. Quisque scelerisque efficitur orci eget accumsan. Ut facilisis rutrum enim. Donec semper velit sed ligula ultricies volutpat. Mauris auctor, ligula ut feugiat congue, nulla eros lobortis dui, id viverra odio ex eu est.</p>
+						</div>
+					</div>
 
-                        <p class="light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vestibulum in nisi vel faucibus. Aliquam erat volutpat. Aliquam dapibus tempus ipsum, sed lobortis turpis venenatis id. Sed quam urna, pellentesque ac finibus in, tempus in orci. Sed ultricies lectus risus, quis luctus lacus fringilla ac. Duis efficitur orci tellus, feugiat blandit mi facilisis ac. Nulla ut urna et magna aliquet tempus.</p>
-                    </div>
-                </div>
+					<div class="col s12 m4">
+						<div class="icon-block">
+							<h2 class="center green-text"><i class="mdi-social-people"></i></h2>
+							<h5 class="center">Company</h5>
 
-                <div class="col s12 m4">
-                    <div class="icon-block">
-                        <h2 class="center green-text"><i class="mdi-hardware-desktop-windows"></i></h2>
-                        <h5 class="center">Company</h5>
+							<p class="light">Fusce molestie nisi enim, vitae ultrices odio maximus et. Donec sit amet congue dolor. Proin fermentum dictum tortor at scelerisque. Vivamus eu arcu et risus vestibulum tincidunt. Nulla facilisi. Nulla facilisi. Suspendisse accumsan id ligula in ullamcorper. Aliquam porta mauris placerat est vestibulum placerat.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</main>
 
-                        <p class="light">Donec suscipit euismod justo vitae tempor. Nullam laoreet fermentum gravida. Proin vel lectus et ipsum elementum tristique. Quisque scelerisque efficitur orci eget accumsan. Ut facilisis rutrum enim. Donec semper velit sed ligula ultricies volutpat. Mauris auctor, ligula ut feugiat congue, nulla eros lobortis dui, id viverra odio ex eu est.</p>
-                    </div>
-                </div>
-
-                <div class="col s12 m4">
-                    <div class="icon-block">
-                        <h2 class="center green-text"><i class="mdi-social-people"></i></h2>
-                        <h5 class="center">Company</h5>
-
-                        <p class="light">Fusce molestie nisi enim, vitae ultrices odio maximus et. Donec sit amet congue dolor. Proin fermentum dictum tortor at scelerisque. Vivamus eu arcu et risus vestibulum tincidunt. Nulla facilisi. Nulla facilisi. Suspendisse accumsan id ligula in ullamcorper. Aliquam porta mauris placerat est vestibulum placerat.</p>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-        <br>
-        <br>
-
-        <div class="section">
-
-        </div>
-    </div>
-
+	<br>
+	
 	<footer class="green page-footer">
 		<div class="container">
 			<div class="row">
