--- a/contact.html
+++ b/contact.html
@@ -56,26 +56,26 @@
 		<div class="container">
 			<div class="section">
 				<div class="row">
-					<form class="col s12">
+					<form class="col s12" action="contact.php">
 						<div class="row">
 							<div class="input-field col s12 m6 l6">
-								<input id="first_namecontact" type="text" class="validate">
+								<input id="first_namecontact" name="first" type="text" class="validate">
 								<label for="first_namecontact" class="">First Name</label>
 							</div>
 							<div class="input-field col s12 m6 l6">
-								<input id="last_namecontact" type="text" class="validate">
+								<input id="last_namecontact" name="last" type="text" class="validate">
 								<label for="last_namecontact">Last Name</label>
 							</div>
 						</div>
 						<div class="row">
 							<div class="input-field col s12">
-								<textarea class="materialize-textarea" required></textarea>
+								<textarea name="message" class="materialize-textarea" required></textarea>
 								<label>Message</label>
 							</div>
 						</div>
 						<div class="row">
 							<div class="input-field col s12">
-								<input id="email" type="email" class="validate">
+								<input id="email" name="email" type="email" class="validate">
 								<label for="email">Email</label>
 							</div>
 						</div>
@@ -141,6 +141,7 @@
     <script src="js/materialize.min.js"></script>
     <script src="js/init.js"></script>
 	<script src="js/mobile.js"></script>
+	<script src="js/contact.js"></script>
 	
 </body>
 
