--- a/sponsors.html
+++ b/sponsors.html
@@ -56,33 +56,18 @@
 		<div class="container">
 			<div class="section">
 				<div class="row">
-					<div class="col s12 m4">
-						<div class="icon-block">
-							<h2 class="center green-text"><i class="mdi-content-flag"></i></h2>
-							<h5 class="center">Company</h5>
-
-							<p class="light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vestibulum in nisi vel faucibus. Aliquam erat volutpat. Aliquam dapibus tempus ipsum, sed lobortis turpis venenatis id. Sed quam urna, pellentesque ac finibus in, tempus in orci. Sed ultricies lectus risus, quis luctus lacus fringilla ac. Duis efficitur orci tellus, feugiat blandit mi facilisis ac. Nulla ut urna et magna aliquet tempus.</p>
+					<div class="col s12 m4 center offset-m4">
+						<div class="card green darken-1">
+							<div class="card-content white-text">
+								<span class="card-title">Sponsor Us</span>
+								<p>Give us a hand with out competition by letting us give out awesome rewards to the smart students who can crack the challenges and come out on top.</p>
+							</div>
+							<div class="card-action">
+								<a href="contact.html">Contact Us</a>
+							</div>
 						</div>
 					</div>
-
-					<div class="col s12 m4">
-						<div class="icon-block">
-							<h2 class="center green-text"><i class="mdi-hardware-desktop-windows"></i></h2>
-							<h5 class="center">Company</h5>
-
-							<p class="light">Donec suscipit euismod justo vitae tempor. Nullam laoreet fermentum gravida. Proin vel lectus et ipsum elementum tristique. Quisque scelerisque efficitur orci eget accumsan. Ut facilisis rutrum enim. Donec semper velit sed ligula ultricies volutpat. Mauris auctor, ligula ut feugiat congue, nulla eros lobortis dui, id viverra odio ex eu est.</p>
-						</div>
-					</div>
-
-					<div class="col s12 m4">
-						<div class="icon-block">
-							<h2 class="center green-text"><i class="mdi-social-people"></i></h2>
-							<h5 class="center">Company</h5>
-
-							<p class="light">Fusce molestie nisi enim, vitae ultrices odio maximus et. Donec sit amet congue dolor. Proin fermentum dictum tortor at scelerisque. Vivamus eu arcu et risus vestibulum tincidunt. Nulla facilisi. Nulla facilisi. Suspendisse accumsan id ligula in ullamcorper. Aliquam porta mauris placerat est vestibulum placerat.</p>
-						</div>
-					</div>
-				</div>
+				</div>	
 			</div>
 		</div>
 	</main>
