--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 						</li>
 						<li><a class="white-text" href="https://www.facebook.com/groups/1418538045055499/">Facebook</a>
 						</li>
-						<li><a class="white-text" href="mailto:">Email</a>
+						<li><a class="white-text" href="mailto:contact@camsctf.com">Email</a>
 						</li>
 						<li><a class="white-text" href="http://camscsc.org/">CAMS CSC</a>
 						</li>
