--- a/sponsors.html
+++ b/sponsors.html
@@ -56,7 +56,7 @@
 		<div class="container">
 			<div class="section">
 				<div class="row">
-					<div class="col s12 m4 center offset-m4">
+					<div class="col s12 m6 center offset-m3">
 						<div class="card green darken-1">
 							<div class="card-content white-text">
 								<span class="card-title">Sponsor Us</span>
@@ -102,7 +102,7 @@
 						</li>
 						<li><a class="white-text" href="https://www.facebook.com/groups/1418538045055499/">Facebook</a>
 						</li>
-						<li><a class="white-text" href="mailto:">Email</a>
+						<li><a class="white-text" href="mailto:contact@camsctf.com">Email</a>
 						</li>
 						<li><a class="white-text" href="http://camscsc.org/">CAMS CSC</a>
 						</li>
