--- a/about.html
+++ b/about.html
@@ -93,9 +93,7 @@
 			<div class="row">
 				<div class="col l6 s12">
 					<h5 class="white-text">CAMS CSC</h5>
-					<p class="grey-text text-lighten-4">The California Academy of Mathematics and Science Computer Science Club is dedicated to spreading knowledge relating to such a vital industry. Different examples of our work include CSCF, Learn, and the Club CTF.</p>
-
-
+					<p class="grey-text text-lighten-4">A Capture the Flag competition created by the California Academy of Mathematics and Science for middle and high school students.</p>
 				</div>
 				<div class="col l3 s12">
 					<h5 class="white-text">Pages</h5>
@@ -127,7 +125,8 @@
 		</div>
 		<div class="footer-copyright">
 			<div class="container">
-				Made by Lujing Cen and Oskar Wirga using <a href="http://materializecss.com/">MaterializeCSS</a>
+			 	&copy; CCTF 2015 | Made with <a class="grey-text text-lighten-2" href="http://materializecss.com/">MaterializeCSS</a>
+				<a class="grey-text text-lighten-2 right" href="https://github.com/bobbyluig/CCTF/blob/master/LICENSE">MIT License</a>
 			</div>
 		</div>
 	</footer>
